--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ background-color: burlywood;
 
 
 </style>
-<body>
+<body style="background-color:rgb(87, 151, 194);">
 <header>
 <p>we will do the lab-1b here</p>
 
