--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 
 h1{color:blue;
 
-background-color: burlywood;
+background-color: rgb(70, 66, 62);
 
 
 }
 
 
 </style>
-<body style="background-color:rgb(87, 151, 194);">
+<body style="background-color:rgb(37, 40, 43);">
 <header>
 <p>we will do the lab-1b here</p>
 
